Mail send transaction completed.

--- a/src/backend/realtime-api/src/main/resources/application.yml
+++ b/src/backend/realtime-api/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
       - common
       - db
       - jwt
-      - -logging
+      - logging
+      - smtp
   application:
     name: realtime-app
