--- a/src/backend/realtime-api/src/main/resources/application-db.yml
+++ b/src/backend/realtime-api/src/main/resources/application-db.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost:5432}/postgres
+    username: ${POSTGRES_USER:postgres}
+    password: ${POSTGRES_PASSWORD:postgres}
     # JPA properties
   jpa:
     hibernate:
