--- a/src/frontend/realtime-app-ui/package.json
+++ b/src/frontend/realtime-app-ui/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@syncfusion/ej2-angular-charts": "^25.2.3",
+    "@syncfusion/ej2-angular-popups": "^25.2.3",
+    "@syncfusion/ej2-material-theme": "~25.2.3",
+    "ag-grid-angular": "^31.3.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
