--- a/src/frontend/realtime-app-ui/angular.json
+++ b/src/frontend/realtime-app-ui/angular.json
@@ -50,7 +50,24 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "test": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -63,6 +80,9 @@
             },
             "development": {
               "buildTarget": "realtime-app-ui:build:development"
+            },
+            "test": {
+              "buildTarget": "realtime-app-ui:build:test"
             }
           },
           "defaultConfiguration": "development"
