--- a/src/backend/realtime-api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/backend/realtime-api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changes/20240510-0100.xml
+  - include:
+      file: db/changelog/changes/20240515-1700.xml
+  - include:
+      file: db/changelog/changes/20240515-1705.xml
