--- a/src/backend/realtime-api/src/main/resources/application-kafka.yml
+++ b/src/backend/realtime-api/src/main/resources/application-kafka.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    bootstrap-servers: ${ENV_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     consumer:
       group-id: realtime-app-group
       auto-offset-reset: earliest
