--- a/src/backend/realtime-api/src/main/resources/application-smtp.yml
+++ b/src/backend/realtime-api/src/main/resources/application-smtp.yml
@@ -3,8 +3,8 @@ spring:
     host: smtp.gmail.com
     port: 465
     protocol: smtps
-    username: ${SMTP_USER:b.calisgan.19@gmail.com}
-    password: ${SMTP_PASSWORD:password}
+    username: ${ENV_SMTP_USER:b.calisgan.19@gmail.com}
+    password: ${ENV_SMTP_PASSWORD:password}
     properties:
       mail:
         smtp:
