--- a/src/backend/realtime-socket/src/environments/.env.production
+++ b/src/backend/realtime-socket/src/environments/.env.production
@@ -1,6 +1,6 @@
-NODE_ENV=prodcution
+NODE_ENV=production
 PORT=3000
-POSTGRES_DB_HOST=localhost
+POSTGRES_DB_HOST=realtimedb
 POSTGRES_DB_PORT=5432
 POSTGRES_DB_DATABASE=postgres
 POSTGRES_DB_USER=postgres
