--- a/src/backend/realtime-api/src/main/resources/environments/dev.env
+++ b/src/backend/realtime-api/src/main/resources/environments/dev.env
@@ -15,3 +15,6 @@ ENV_KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 
 ENV_SMTP_USER=b.calisgan.19@gmail.com
 ENV_SMTP_PASSWORD=password
+
+ENV_REDIS_PORT=6379
+ENV_REDIS_HOST=localhost
