--- a/src/backend/realtime-api/src/main/resources/environments/prod.env
+++ b/src/backend/realtime-api/src/main/resources/environments/prod.env
@@ -11,7 +11,10 @@ ENV_JWT_SECRET=realtime-app-secret
 ENV_JWT_EXPIRATION_MS=86400000
 ENV_REFRESH_EXPIRATION_MS=86400000
 
-ENV_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+ENV_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
 
 ENV_SMTP_USER=b.calisgan.19@gmail.com
 ENV_SMTP_PASSWORD=password
+
+ENV_REDIS_PORT=6379
+ENV_REDIS_HOST=redis
