--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -10,6 +10,11 @@ services:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   zookeeper:
     container_name: zookeeper
@@ -17,6 +22,11 @@ services:
       - 2181:2181
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   
   kafka:
     container_name: kafka
@@ -32,7 +42,8 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_MIN_INSYNC_REPLICAS: 1
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
       
   redis:
     container_name: redis
@@ -41,6 +52,11 @@ services:
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   realtime.socket:
     container_name: realtime.socket
@@ -49,7 +65,8 @@ services:
     environment:
       PROFILE: production
     depends_on:
-      - realtimedb
+      realtimedb:
+        condition: service_healthy
 
   realtime.ui:
     container_name: realtime.ui
@@ -58,8 +75,10 @@ services:
     environment:
       NODE_ENV: production
     depends_on:
-      - realtime.socket
-      - realtimedb
+      realtime.socket:
+        condition: service_started
+      realtime.api:
+        condition: service_started
 
   realtime.api:
     container_name: realtime.api
@@ -68,4 +87,10 @@ services:
     environment:
       PROFILE: prod
     depends_on:
-      - realtimedb
+      realtimedb:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+
